# freshjots-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/freshjots/: __init__.py
tests/: test_freshjots.py
