[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshjots"
version = "1.0.1"
description = "Tiny Python client for the Fresh Jots API. Append-only notebooks for cron jobs, deploy scripts, and bots."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Goran Arsov", email = "arsphy@yahoo.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage      = "https://github.com/Goran-Arsov/freshjots-python"
Documentation = "https://freshjots.com/docs"
Source        = "https://github.com/Goran-Arsov/freshjots-python"
Issues        = "https://github.com/Goran-Arsov/freshjots-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/freshjots"]
